Tweaks from janet.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ relative_permalinks: true
 
 # Setup
 title:               Janet Matsen's protocols
-tagline:             'Delicious recipies.'
+tagline:             'for metabolic engineering.'
 description:         'Developed in the <a href="http://depts.washington.edu/mllab/" target="_blank">Lidstrom Lab</a>.'
 url:                 http://matsen.github.io/lanyon
 baseurl:             /
