Github repo link

--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,9 @@ author:
 
 # Custom vars
 version:             1.0.0
+
+github:
+  repo:              https://github.com/JanetMatsen/protocols
+
+
+
